fix: minor layout issues

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -245,6 +245,11 @@ main ol {
     animation: slide-in-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+
+ol.bibliography {
+    margin-left: 0px;
+}
+
 .bibliography {
     list-style: none;
     padding-left: 0px;
