--- a/src/tailwind.src.css
+++ b/src/tailwind.src.css
@@ -65,4 +65,7 @@
   .top-20 {
     top: 20px;
   }
+  .top-30 {
+    top: 30px;
+  }
 }
